@rmiles HUDF-575 fixed firefox.less to align the image

--- a/FJSHUD/app/styles/firefox.less
+++ b/FJSHUD/app/styles/firefox.less
@@ -340,7 +340,7 @@
   .LeftBarNotificationMessageSection{
     float: left;
     padding-left: 0px;
-    width: 82%;
+    width: 82% !important;
     clear: none;
     
     .NotificationDisplayName {
